Validate all indexes are present on `Parameter` fields